2004-02-27  Heikki Junes <hjunes@cc.hut.fi>

	* input/test/[+c-i]*.ly: refresh descriptions -- maintain
	impersonal style.

2004-02-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/define-markup-commands.scm (upright): New markup command.

	* lily/parser.yy (markup): Add STRING_IDENTIFIER.

	* scm/font.scm (paper20-font-vector): cmcsc klugdge.

	* scm/output-ps.scm (output-stencil): New function.

	* scripts/lilypond-book.py (do_file): Bugfix: change search order
	of snippet types; fixes @ignore and @verbatim blocks.

2004-02-26  Heikki Junes <hjunes@cc.hut.fi>

        * input/test/[a-b]*.ly: refresh descriptions -- avoid referring
        to a file in printed documentation, instead, refer either to a 
        syntax or to an output.

2004-02-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* input/regression/beam-center-slope.ly: Add test.

2004-02-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* mf/GNUmakefile (Fontmap, Fontmap.lily): Add Fontmap for GS.
	(SAUTER_FONTS): Reinstate.

	* scm/define-markup-commands.scm (caps): New markup command.

	* scm/output-ps.scm (output-scopes): Experimental markup output.

	* scm/: Add missing headers.

	* lily/stencil-scheme.cc (ly_stencil_get_expr): New accessor.

	* lily/paper-outputter.cc (output_metadata): Add parameter PAPER.

2004-02-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/stencil-scheme.cc (ly_stencil_get_expr): New function.
	Stray style cleanups.

2004-02-25  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/note-collision.cc (check_meshing_chords): bugfix for dot /
	no dot combination.

	* scripts/convert-ly.py (FatalConversionError.subst_in_trans):
	substitute \override Staff.autoBeamSettings too

	* Documentation/user/tutorial.itely: proofreading fixes by David
	Bobroff

2004-02-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/output-ps.scm (top-of-file): Add tagline definition.  FIXME.

	* ps/music-drawing-routines.ps: 
	* ps/lilyponddefs.ps: Add end markers.

2004-02-24  Han-Wen Nienhuys   <hanwen@xs4all.nl>
